# IconFace

./: CMakeLists.txt  IconFace.xmi  README
include/: IconFaceLib.h
src/: IconFace.cpp  IconFaceLib.cpp
